# aLocas

./: .ec  .gitmodules  .sym  CMakeLists.txt  Makefile
include/: ec.h  fsalloc.h
src/: fsalloc.c
test/: CMakeLists.txt  fsalloc.c
